added forgot password pages

--- a/app/src/main/res/layout/activity_act2.xml
+++ b/app/src/main/res/layout/activity_act2.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="8dp"
         android:drawableLeft="@drawable/ic_action_name"
         android:ems="10"
-        android:hint=" Username"
+        android:hint="@string/user_name"
         android:inputType="textPersonName"
         android:textColor="@android:color/background_light"
         android:textColorLink="#3D2B2A"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="8dp"
         android:drawableLeft="@drawable/ic_action_name2"
         android:ems="10"
-        android:hint=" Password"
+        android:hint="@string/user_password"
         android:inputType="numberPassword"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:text="Forgot Password ?"
+        android:text="@string/forgot_password"
         android:textColor="#EBF3F2"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:text="No account yet? Create one"
+        android:text="@string/create"
         android:textColor="#EDF3F2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
