--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -201,7 +201,7 @@
         app:srcCompat="@mipmap/ic_launcher2" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/regsignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
