Added the main feed and navigation to other views

--- a/app/src/main/res/layout-land/slider_content_layout.xml
+++ b/app/src/main/res/layout-land/slider_content_layout.xml
@@ -7,17 +7,21 @@
 
     <ImageView
         android:id="@+id/imageHolder"
-        android:layout_width="312dp"
-        android:layout_height="218dp"
+        android:layout_width="290dp"
+        android:layout_height="216dp"
         android:layout_marginStart="72dp"
         android:layout_marginLeft="72dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/description1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.301"
+        app:layout_constraintVertical_bias="0.497"
         app:srcCompat="@drawable/whatisthis" />
 
     <TextView
@@ -43,10 +47,10 @@
     <TextView
         android:id="@+id/pageDescription"
         android:layout_width="283dp"
-        android:layout_height="218dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
@@ -57,9 +61,9 @@
         app:fontFamily="@font/segoeui"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toEndOf="@+id/imageHolder"
+        app:layout_constraintHorizontal_bias="0.872"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.301" />
+        app:layout_constraintVertical_bias="0.508" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
