--- a/app/src/main/res/layout/activity_act2.xml
+++ b/app/src/main/res/layout/activity_act2.xml
@@ -93,7 +93,7 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/btnLogin"
         android:layout_width="148dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
