--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -58,12 +57,11 @@
         android:background="@android:color/transparent"
         android:text="@string/backButton"
         android:textColor="#FAFFFFFF"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sliderDots"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainViewPager"
-        android:visibility="invisible"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/mainViewPager" />
 
     <Button
         android:id="@+id/next"
@@ -78,12 +76,11 @@
         android:background="@android:color/transparent"
         android:text="@string/nextButton"
         android:textColor="#FFFFFF"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sliderDots"
-        app:layout_constraintTop_toBottomOf="@+id/mainViewPager"
-        android:visibility="visible"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/mainViewPager" />
 
     <Button
         android:id="@+id/signin"
