--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -9,6 +9,6 @@
         android:id="@+id/textView16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/nav_feedback"
+        android:text="@string/nav_contact"
         android:textSize="50sp" />
 </FrameLayout>
