--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -5,15 +5,15 @@
     <item
         android:id="@+id/navBtnHome"
         android:icon="@drawable/nav_home"
-        android:title="@string/home" />
+        android:title="@string/nav_home" />
     <item
         android:id="@+id/navBtnAsk"
         android:icon="@drawable/nav_ask"
         android:title="@string/nav_question" />
     <item
-        android:id="@+id/navBtnFeeback"
+        android:id="@+id/navBtnContact"
         android:icon="@drawable/nav_feedback"
-        android:title="@string/nav_feedback" />
+        android:title="@string/nav_contact" />
     <item
         android:id="@+id/navBtnSettings"
         android:icon="@drawable/nav_settings"
