added user profile

--- a/app/src/main/res/layout/activity_forgotpassword2.xml
+++ b/app/src/main/res/layout/activity_forgotpassword2.xml
@@ -38,7 +38,7 @@
         android:textColor="#F8F4F6"
         android:textSize="30sp"
         android:textStyle="bold|italic"
-        app:fontFamily="sans-serif-condensed"
+        app:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.258"
