--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,30 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         >
 
         <TextView
             android:id="@+id/textView2"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_heading"
-            android:textSize="28sp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            />
+            android:gravity="center"
+            android:text="@string/home_heading"
+            android:textSize="28sp" />
 
         <ListView
             android:id="@+id/question_listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:divider="#d1d2d1"
-            android:dividerHeight="2dp"
-            >
+            android:dividerHeight="2dp">
 
         </ListView>
 
