--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="@string/nav_settings"
         android:textSize="50sp" />
 </FrameLayout>
