added connections to kevins interfaces

--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -11,8 +11,8 @@
         android:id="@+id/view2"
         class="androidx.appcompat.widget.ActionMenuView"
         id="@+id/view"
-        android:layout_width="319dp"
-        android:layout_height="588dp"
+        android:layout_width="325dp"
+        android:layout_height="618dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Forgot your password?"
+        android:text="@string/forgot_your_password"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold|italic"
@@ -60,7 +60,7 @@
         android:background="@drawable/edittext_round"
         android:drawableLeft="@drawable/ic_action_name4"
         android:ems="10"
-        android:hint=" Enter Your Email"
+        android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,5 +146,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.445"
         app:srcCompat="@drawable/images" />
+
+    <ImageButton
+        android:id="@+id/home"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="43dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        android:tint="@color/browser_actions_text_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/conthome" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
