--- a/app/src/main/res/layout/activity_forgotpassword2.xml
+++ b/app/src/main/res/layout/activity_forgotpassword2.xml
@@ -11,8 +11,8 @@
         android:id="@+id/view5"
         class="androidx.appcompat.widget.ActionMenuView"
         id="@+id/view4"
-        android:layout_width="345dp"
-        android:layout_height="647dp"
+        android:layout_width="333dp"
+        android:layout_height="633dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
@@ -34,7 +34,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Reset Password"
+        android:text="@string/reset"
         android:textColor="#F8F4F6"
         android:textSize="30sp"
         android:textStyle="bold|italic"
@@ -59,7 +59,7 @@
         android:background="@drawable/edittext_round"
         android:drawableLeft="@drawable/ic_action_name5"
         android:ems="10"
-        android:hint=" Password"
+        android:hint="@string/user_password"
         android:inputType="textPassword"
 
         app:layout_constraintBottom_toBottomOf="parent"
@@ -83,7 +83,7 @@
         android:background="@drawable/edittext_round"
         android:drawableLeft="@drawable/ic_action_name5"
         android:ems="10"
-        android:hint=" Confirm Password"
+        android:hint="@string/conf_password"
         android:inputType="textPassword"
 
         app:layout_constraintBottom_toBottomOf="parent"
@@ -152,4 +152,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.31"
         app:srcCompat="@mipmap/ic_launcher5" />
+
+
+    <ImageButton
+        android:id="@+id/home"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="43dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        android:tint="@color/browser_actions_text_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/conthome" />
 </androidx.constraintlayout.widget.ConstraintLayout>
