--- a/app/src/main/res/layout/activity_personalprofile.xml
+++ b/app/src/main/res/layout/activity_personalprofile.xml
@@ -33,7 +33,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Name"
+        android:text="@string/nam"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="146dp"
+        android:layout_width="156dp"
         android:layout_height="47dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -120,7 +120,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Edit Details"
+        android:text="@string/editdetails_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
@@ -137,7 +137,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Password"
+        android:text="@string/user_password"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/rtrpassword"
@@ -186,7 +186,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Show My Feedback"
+        android:text="@string/show_feedback"
         android:textColor="#383535"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -223,7 +223,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Proceed to Dashboard"
+        android:text="@string/proceed_feedback"
         android:textColor="#383535"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -243,7 +243,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Personal Profile"
+        android:text="@string/prsnl_prof"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -254,7 +254,7 @@
         app:layout_constraintVertical_bias="0.037" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/signout"
         android:layout_width="146dp"
         android:layout_height="47dp"
         android:layout_marginStart="8dp"
@@ -263,8 +263,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Sign Out"
         android:background="@drawable/custom_login_button"
+        android:text="@string/signout_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
@@ -274,7 +274,7 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="166dp"
+        android:layout_width="156dp"
         android:layout_height="47dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -282,7 +282,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Delete Account"
+        android:text="@string/deleteAcc_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.917"
