--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,7 +42,7 @@
         android:background="@drawable/com_facebook_auth_dialog_cancel_background"
         android:drawableLeft="@drawable/ic_action_name"
         android:ems="10"
-        android:hint=" Enter Name"
+        android:hint="@string/enter_name"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
         android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
@@ -65,7 +65,7 @@
         android:background="@drawable/com_facebook_auth_dialog_cancel_background"
         android:drawableLeft="@drawable/ic_action_name3"
         android:ems="10"
-        android:hint=" Enter Email"
+        android:hint="@string/email_enter"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
         android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
@@ -89,7 +89,7 @@
 
         android:drawableLeft="@drawable/ic_action_name2"
         android:ems="10"
-        android:hint=" Enter Password"
+        android:hint="@string/password_enter"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
         android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
@@ -109,7 +109,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Register Yourself !"
+        android:text="@string/self_register"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="36sp"
         android:textStyle="bold|italic"
@@ -152,7 +152,7 @@
         android:background="@drawable/com_facebook_auth_dialog_cancel_background"
         android:drawableLeft="@drawable/ic_action_name2"
         android:ems="10"
-        android:hint="Re-enter Password"
+        android:hint="@string/password_reenter"
         android:inputType="textPersonName"
         android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -171,7 +171,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Agree to terms and conditions"
+        android:text="@string/conditions"
         android:textColor="@android:color/background_light"
         android:textColorHint="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -210,7 +210,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:text="Already an user? Click to sign In"
+        android:text="@string/already_user"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -229,7 +229,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="100% secure"
+        android:text="@string/secure"
         android:textColor="@color/com_facebook_button_background_color_focused_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
