--- a/app/src/main/res/layout/content_user_activitydashbord.xml
+++ b/app/src/main/res/layout/content_user_activitydashbord.xml
@@ -53,7 +53,7 @@
         android:layout_marginRight="8dp"
         android:background="#00FFFFFF"
         android:text="@string/user_name"
-        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:textColor="#3C5A99"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView8"
@@ -84,8 +84,8 @@
         android:layout_height="wrap_content"
         android:background="#3BFFEB3B"
         android:clickable="true"
-        android:text="@string/replydetails"
-        android:textColor="@color/com_facebook_button_background_color_focused"
+        android:text="reply details"
+        android:textColor="#3C5A99"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView16"
@@ -240,7 +240,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/urflows"
+        android:text="your flows"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView17"
         app:layout_constraintEnd_toEndOf="parent"
@@ -259,7 +259,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/notfidetails"
+        android:text="notification details"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
