--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -45,7 +45,7 @@
         android:hint="@string/enter_name"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
-        android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
+        android:textColorHint="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         android:hint="@string/email_enter"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
-        android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
+        android:textColorHint="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
         android:hint="@string/password_enter"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
-        android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
+        android:textColorHint="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
         android:ems="10"
         android:hint="@string/password_reenter"
         android:inputType="textPersonName"
-        android:textColorHint="@color/com_facebook_button_background_color_focused_disabled"
+        android:textColorHint="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -230,7 +230,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/secure"
-        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+        android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.403"
