--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -90,7 +90,7 @@
         android:drawableLeft="@drawable/ic_action_name2"
         android:ems="10"
         android:hint="@string/password_enter"
-        android:inputType="textPersonName"
+        android:inputType="numberPassword"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,14 +124,12 @@
         android:layout_width="151dp"
         android:layout_height="49dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_corner_button"
         android:text="Sign Up"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,20 +138,19 @@
         app:layout_constraintVertical_bias="0.854" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/etphone"
         android:layout_width="245dp"
         android:layout_height="39dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/com_facebook_auth_dialog_cancel_background"
-        android:drawableLeft="@drawable/ic_action_name2"
+        android:drawableLeft="@drawable/ic_action_name6"
         android:ems="10"
-        android:hint="@string/password_reenter"
-        android:inputType="textPersonName"
+        android:hint="@string/phone_num"
+        android:inputType="number"
+        android:textColor="@android:color/white"
         android:textColorHint="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
