--- a/app/src/main/res/drawable-mdpi/rounded_corner_button.xml
+++ b/app/src/main/res/drawable-mdpi/rounded_corner_button.xml
@@ -7,7 +7,7 @@
             android:shape="rectangle">
 
             <solid
-                android:color="#C05F5F" />
+                android:color="#852C2C" />
 
             <stroke
                 android:color="@color/colorAccent"
