--- a/app/src/main/res/layout/activity_forgotpassword2.xml
+++ b/app/src/main/res/layout/activity_forgotpassword2.xml
@@ -47,7 +47,7 @@
         app:layout_constraintVertical_bias="0.098" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/etphone"
         android:layout_width="232dp"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
